--- a/source/_includes/projects/juniorchefacademy.html
+++ b/source/_includes/projects/juniorchefacademy.html
@@ -12,7 +12,7 @@
 			<span class="project__year">2013</span>
 		</aside>
 
-		<p class="project__description">Gastropub Etsy narwhal, selvage sustainable quinoa Brooklyn banh mi XOXO selfies Tumblr cray tote bag banjo polaroid. Umami Neutra seitan raw denim mustache. Williamsburg Godard Echo Park pug street art. Direct trade bespoke tofu Williamsburg, ethnic hoodie letterpress gastropub next level. Pitchfork kale chips gluten-free Pinterest. Paleo crucifix keytar, swag Marfa trust fund readymade irony twee iPhone. Tofu mlkshk distillery DIY, aesthetic ethnic Kickstarter banjo single-origin coffee ennui PBR 8-bit gluten-free whatever.</p>
+		<p class="project__description">Junior Chef Academy offers a one-of-a-kind extra-curricular learning experience for kids and teenagers, which happens to be a particularly crowded space in Hong Kong. Founder Judy Li subverts the typical recipe-based approach to cooking classes, instead teaching basic kitchen skills and simple preparations with a focus on nutritional, wholesome eating, giving her students a headstart on building healthy eating habits and self-sufficiency in the kitchen. This project was a joy to work on! The visual identity design struck a great balance between the playfulness of the class experience and the seriousness of underlying teachings. Print collateral and a landing page was created to promote their inaugural series of summer classes.</p>
 
 		<!-- <figure class="project__figure">
       <img src="assets/hh-responsive.png" alt="">
