--- a/source/sass/atoms/_colors.scss
+++ b/source/sass/atoms/_colors.scss
@@ -11,3 +11,9 @@
 //=============================================================================/
 
 $neon-pink: rgb(238, 95, 129);
+
+$neon-1: #EC5587;
+$neon-2: #FCEB3D;
+$neon-3: #A7DB7D;
+$neon-4: #52B8C4;
+$neon-5: #D336FF;
