- Compressed images for HarmonyHome - Set different unobtrusive-border-color for different projects

--- a/source/_includes/projects/harmonyhome.html
+++ b/source/_includes/projects/harmonyhome.html
@@ -15,7 +15,7 @@
     <p class="project__description">Home is a partnership between Eliza and Winnie, clinical psychologists specializing in child development and family services, with a strong emphasis on practising positive psychology. Their new website was designed around a serene, uplifting graphical identity that reflects the personality and values of the practice. The old content-management system was also stripped out and replaced with leaner, more specialized components to simplify creating structured content like articles and workshops, and to significantly reduce maintenance overhead. The responsive site was templated and built with <a href="http://jekyllrb.com/">Jekyll</a>, hosted on <a href="https://pages.github.com/">Github Pages</a>, and integrated with <a href="http://developmentseed.org/blog/2012/june/25/prose-a-content-editor-for-github/">Prose.io</a> for writing and publishing.</p>
 
     <figure class="project__figure">
-      <img src="assets/hh-responsive.png" alt="">
+      <img src="assets/hh-responsive-lossy.png" alt="">
     </figure>
 
     <figure class="project__figure">
@@ -30,8 +30,8 @@
     </figure>
 
     <figure class="project__figure">
-      <img src="assets/hh-profile.jpg" alt="" class="bordered half">
-      <img src="assets/hh-services.jpg" alt="" class="bordered half last">
+      <img src="assets/hh-profile-lossy.jpg" alt="" class="bordered half">
+      <img src="assets/hh-services-lossy.jpg" alt="" class="bordered half last">
     </figure>
 
   </article>
