- Added lossless and lossy assets for Ekpac - Set up <figure>s to accomodate <video>

--- a/source/_includes/projects/ekpac.html
+++ b/source/_includes/projects/ekpac.html
@@ -14,9 +14,33 @@
 
 		<p class="project__description">Ekpac started in Hong Kong as seafaring merchants, evolving over the course of a century into an industrial conglomerate operating across diverse construction and manufacturing sectors. A standalone marketing website was commissioned as part of an initiative to grow the sourcing division into a core line-of-business for the group. The nature of sourcing for large scale industrial organization means generating sales comes down to the efforts and expertise of Ekpac’s global sales force. The website was designed accordingly around the purpose of reinforcing the company’s reputation for quality and service. Additionally, a concept for a visual identity redesign was developed for Ekpac to explore the possibility of a broader refresh of the corporate brand.</p>
 
-		<!-- <figure class="project__figure">
-      <img src="assets/hh-responsive.png" alt="">
-		</figure> -->
+		<figure class="project__figure">
+      <img src="assets/ekpac-responsive-lossy.png" alt="">
+		</figure>
+
+		<figure class="project__figure">
+			<video autoplay loop class="">
+				<source src="assets/ekpac-process.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
+				<source src="assets/ekpac-process.webm" type="video/webm; codecs=vp8,vorbis">
+				<source src="assets/ekpac-process.ogv" type="video/ogg; codecs=theora,vorbis">
+			</video>
+			<figcaption class="left">The sourcing business’s process and approach was presented as candidly as possible to stand out in China’s industrial sector, which is often perceived as opaque and impenetrable.</figcaption>
+		</figure>
+
+		<figure class="project__figure">
+			<img src="assets/ekpac-products-lossy.jpg" alt="" class="bordered half">
+			<img src="assets/ekpac-excellence-lossy.jpg" alt="" class="bordered half last">
+		</figure>
+
+		<figure class="project__figure">
+			<img src="assets/ekpacID-heritage.jpg" alt="" class="bordered half">
+			<img src="assets/ekpacID-wordmark.jpg" alt="" class="bordered half last">
+		</figure>
+
+		<figure class="project__figure">
+			<img src="assets/ekpacID-lockups.jpg" alt="" class="bordered half">
+			<img src="assets/ekpacID-colors.jpg" alt="" class="bordered half last">
+		</figure>
 
 	</article>
 </div>
