--- a/source/sass/organisms/_project-ekpac.scss
+++ b/source/sass/organisms/_project-ekpac.scss
@@ -62,6 +62,11 @@
       font-weight: 400;
     }
 
+  // <img> inside <figure>
+  .ekpac .bordered {
+    @include box-shadow(0 0 0 1px lighten(#093054, 6));
+  }
+
   // Description
   .ekpac .project__description {
     font-weight: 400;
