- Tweaked Ekpac assets - Lightened Ekpac image border color

--- a/source/_includes/projects/ekpac.html
+++ b/source/_includes/projects/ekpac.html
@@ -33,6 +33,10 @@
 		</figure>
 
 		<figure class="project__figure">
+			<img src="assets/ekpacID-beforeAfter.png" alt="" class="bordered">
+		</figure>
+
+		<figure class="project__figure">
 			<img src="assets/ekpacID-heritage.jpg" alt="" class="bordered half">
 			<img src="assets/ekpacID-wordmark.jpg" alt="" class="bordered half last">
 		</figure>
