--- a/source/_includes/page-header.html
+++ b/source/_includes/page-header.html
@@ -1,17 +1,18 @@
 <section class="hero">
-  <header class="header" role="banner">
-    <a href="#" class="mark">{% include svg/mark-monogram.svg %}</a>
+  <!-- <a href="/" id="mark">{% include svg/mark.svg %}</a> -->
+
+  <header class="header">
+
+    <h1 class="main-title">Albert Yu is a freelance designer and developer in Hong Kong. He does not write nor speak in the third person.</h1>
 
     <nav role="navigation">
       <ul class="navigation">
         <li><a href="">Projects</a></li>
-        <li><a href="">Information</a></li>
+        <li><a href=""><span class="xs">Info</span><span class="md">Information</span></a></li>
+        <li><a href="">Journal</a></li>
         <li><a href="">Contact</a></li>
       </ul>
     </nav>
-
-    {% include svg/mark-slash.svg %}
   </header>
 
-  <h1 class="main-title"><p>Albert Yu is a freelance designer and developer in Hong Kong. He does not write nor speak in the third person.</p></h1>
 </section>
