--- a/source/sass/molecules/_navigation.scss
+++ b/source/sass/molecules/_navigation.scss
@@ -11,14 +11,12 @@
 //=============================================================================/
 
 nav {
-  float: left;
-  // padding: 1rem 0;
+  padding: 3.1rem 0 0.618rem;
 
-  @include breakpoint($tablet) {
-    width: 80%;
-    padding: 0.579rem 0 0.382rem;
-    text-align: right;
-  }
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 // <ul>
@@ -28,8 +26,21 @@ nav {
   // Type
   @extend %verlagBook;
   text-transform: uppercase;
-  font-size: 0.7rem;
-  letter-spacing: 1px;
+  font-size: 0.695rem;
+  line-height: 1;
+
+  @include breakpoint(400px) {
+    letter-spacing: 1px;
+  }
+
+  @include breakpoint($tablet) {
+    font-size: 0.833rem;
+  }
+
+  @include breakpoint($laptop) {
+    font-size: 0.833rem;
+    max-width: 34.8306782768rem;
+  }
 }
 
   .navigation li:not(:last-of-type) {
@@ -37,8 +48,14 @@ nav {
       content: " /";
       font-size: 150%;
       font-weight: 300;
-      margin: 0 0.1666666667rem;
+      // font-style: italic;
       color: $neon-pink;
+      margin: 0 2px;
+
+      @include breakpoint(400px) {
+        font-style: italic;
+        margin: 0 0.1666666667rem;
+      }
     }
   }
 
@@ -63,5 +80,20 @@ nav {
     &:focus,
     &:active {
       @extend %noTap;
+    }
+  }
+
+  // <span>
+  .xs {
+    @include breakpoint(520px) {
+      display: none;
+    }
+  }
+
+  .md {
+    display: none;
+
+    @include breakpoint(520px) {
+      display: inline;
     }
   }
