- Detached <section>s for information into partials - Tightened up scss organization for info-blocks to better adhere to BEM

--- a/source/sass/atoms/_text.scss
+++ b/source/sass/atoms/_text.scss
@@ -10,7 +10,21 @@
 //                                                                             /
 //=============================================================================/
 
+// Default text style
+%text {
+  @extend %callunaLight;
+  font-size: 1rem;
+  line-height: 1.65;
+  text-rendering: optimizeLegibility;
+  color: #212121;
+
+  margin: auto auto 1rem;
+
+  @include breakpoint($desktop) {
+    line-height: 1.6;
+  }
+}
+
 p {
-  // margin-bottom: 1rem;
   margin: auto auto 1rem;
 }
