--- a/source/sass/manifest.scss
+++ b/source/sass/manifest.scss
@@ -59,6 +59,7 @@
   @import "templates/header";
   @import "templates/project-block";
   @import "templates/info-block";
+  @import "templates/info-information";
   @import "templates/info-contact";
   @import "templates/footer";
 
