--- a/source/sass/templates/_info-contact.scss
+++ b/source/sass/templates/_info-contact.scss
@@ -10,22 +10,23 @@
 //                                                                             /
 //=============================================================================/
 
-.block.contact {
+.block--contact {
   background-color: #2e2e2e;
 }
 
-/* .block.contact .column {
-  padding: 6rem 0;
-} */
+  // <h2>
+  .block__title--contact {
+    @extend %callunaLight;
+    font-size: 1.618rem;
+    line-height: 1.2;
+    color: #c4c4c4;
+    margin-bottom: 2.618rem;
 
-.block.contact p {
-  font-size: 1.618rem;
-  line-height: 1.2;
-  color: #c4c4c4;
-  margin-bottom: 2.618rem;
-}
+    @include breakpoint($tablet) {
+      font-size: 1.348rem;
+    }
 
-.contact-button-wrapper {
-  width: 60%;
-  margin: 0 auto;
-}
+    @include breakpoint($laptop) {
+      font-size: 1.618rem;
+    }
+  }
