Added logo to information section.

--- a/source/_includes/section-information.html
+++ b/source/_includes/section-information.html
@@ -1,6 +1,6 @@
 <div class="block block--info block--information">
   <article class="column">
-    <!-- <h2 class="block--info__title">Work/Play</h2> -->
+    {% include svg/mark.svg %}
 
     <h2 class="block__title--information">I’m a designer and developer dedicated to building meaningful experiences that distill clarity from complexity, marry form to function, and connect ideas to people.</h2>
 
