- Added target anchors - Cleaned up junk metadata from generated <svg>s - Fixed minor html5 validation errors

--- a/source/_includes/section-contact.html
+++ b/source/_includes/section-contact.html
@@ -1,8 +1,8 @@
+<a id="contact"></a>
 <div class="block block--info block--contact">
   <section class="column">
-    <!-- <h1 class="block--info__title">Contact</h1> -->
     <h2 class="block__title--contact">Currently available for new projects, or collaborations with other designers, programmers, artists, or engineers. I love diving into new challenges and meeting new friends.</h2>
 
-    <a href="mailto:albert@albertyu.co" class="button"><span class="button__arrow"></span>Get In Touch</a>
+    <a href="mailto:albert@albertyu.co" class="button" role="button"><span class="button__arrow"></span>Get In Touch</a>
   </section>
 </div>
