--- a/source/_includes/section-information.html
+++ b/source/_includes/section-information.html
@@ -1,3 +1,4 @@
+<a id="information"></a>
 <div class="block block--info block--information">
   <article class="column">
     {% include svg/mark.svg %}
