--- a/source/_includes/page-footer.html
+++ b/source/_includes/page-footer.html
@@ -1,5 +1,5 @@
 <footer class="block block--footer">
-  <section class="column">
+  <div class="column">
   	<ul class="social cl-effect-12">
   		<li><a href="" class="icon icon--phone">{% include svg/phone.svg %}</a></li>
   		<li><a href="https://twitter.com/mj12albert" target="_blank" class="icon icon--twitter">{% include svg/twitter.svg %}</a></li>
@@ -8,5 +8,5 @@
   		<li><a href="mailto:albert@albertyu.co" class="icon icon--email">{% include svg/email.svg %}</a></li>
   	</ul>
 		<small class="legal">&copy; 2014 Albert Yu</small>
-  </section>
+  </div>
 </footer>
