--- a/source/_includes/page-header.html
+++ b/source/_includes/page-header.html
@@ -6,10 +6,10 @@
 
     <nav role="navigation">
       <ul class="navigation">
-        <li><a href="">Projects</a></li>
-        <li><a href=""><span class="xs">Info</span><span class="md">Information</span></a></li>
+        <li><a data-scroll href="#projects">Projects</a></li>
+        <li><a data-scroll href="#information"><span class="xs">Info</span><span class="md">Information</span></a></li>
         <li><a href="">Journal</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a data-scroll href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
