- Patched up layout and css for small-screen styles

--- a/source/_includes/document-header.html
+++ b/source/_includes/document-header.html
@@ -24,8 +24,8 @@
     })(document);
   </script>
 
-  <!-- Cloud.typography -->
-  <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6808232/682504/css/fonts.css" />
+  <!-- Cloud.typography 1.1.0 -->
+  <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6808232/761324/css/fonts.css" />
 
   <link rel="stylesheet" href="css/manifest.css">
 </head>
