--- a/source/sass/organisms/_project-header.scss
+++ b/source/sass/organisms/_project-header.scss
@@ -35,13 +35,18 @@
   // <h1>
   .project__title {
     font-size: 2.618rem;
-    margin-bottom: 2.618rem;
-    padding-bottom: 1.618rem;
+
+    width: 90%;
+    margin: 0 auto 1.618rem auto;
+    padding-bottom: 1.348rem;
 
     border-bottom-width: 1px;
     border-bottom-style: solid;
 
     @include breakpoint($tablet) {
+      width: 100%;
+      margin-bottom: 2.618rem;
+      padding-bottom: 1.618rem;
       letter-spacing: -1px;
     }
   }
