--- a/source/sass/organisms/_project-img.scss
+++ b/source/sass/organisms/_project-img.scss
@@ -13,7 +13,12 @@
 .project__figure {
   img,
   video {
-    max-width: 100%;
+    // display: block;
+    width: 100%;
+
+    @include breakpoint($phoneL) {
+      max-width: 100%;
+    }
   }
 }
 
@@ -27,7 +32,7 @@
 
 .half {
   width: 100%;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.618rem;
 
   &.fixed {
     margin-right: 1.5rem;
