- Added disabled link style - Disabled link to blog (journal.albertyu.co)

--- a/source/sass/molecules/_navigation.scss
+++ b/source/sass/molecules/_navigation.scss
@@ -97,3 +97,15 @@ nav {
       display: inline;
     }
   }
+
+// DISABLED LINK
+#disabled {
+  &:link,
+  &:visited,
+  &:hover,
+  &:focus,
+  &:active {
+    color: #ebebeb;
+    text-decoration: line-through;
+  }
+}
