--- a/source/_includes/page-header.html
+++ b/source/_includes/page-header.html
@@ -8,7 +8,7 @@
       <ul class="navigation">
         <li><a data-scroll href="#projects">Projects</a></li>
         <li><a data-scroll href="#information"><span class="xs">Info</span><span class="md">Information</span></a></li>
-        <li><a href="">Journal</a></li>
+        <li><a href="http://journal.albertyu.co" id="disabled">Journal</a></li>
         <li><a data-scroll href="#contact">Contact</a></li>
       </ul>
     </nav>
