- Finished <figcaption> design and styling - Removed unused font abstractions

--- a/source/_includes/projects/ekpac.html
+++ b/source/_includes/projects/ekpac.html
@@ -30,7 +30,7 @@
 				<source src="assets/ekpac-process.webm" type="video/webm; codecs=vp8,vorbis">
 				<source src="assets/ekpac-process.ogv" type="video/ogg; codecs=theora,vorbis">
 			</video>
-			<figcaption class="left">The sourcing business’s process and approach was presented as candidly as possible to stand out in China’s industrial sector, which is often perceived as opaque and impenetrable.</figcaption>
+			<figcaption class="project__caption--ekpac left">The sourcing business’s process and approach was presented as candidly as possible to stand out in China’s industrial sector, which is often perceived as opaque and impenetrable.</figcaption>
 		</figure>
 
 		<figure class="project__figure">
