--- a/source/_includes/projects/harmonyhome.html
+++ b/source/_includes/projects/harmonyhome.html
@@ -41,7 +41,7 @@
         <img srcset="assets/hh-style-tile-b-sm.jpg, assets/hh-style-tile-b-sm@2x.jpg 2x" >
       </picture>
 
-      <figcaption class="right">Style tiles and element collages were used to quickly explore visual styles and elements. The final design is characterized by a soft color palette derived from the existing logo and subtle photography treatments.</figcaption>
+      <figcaption class="project__caption--harmonyhome right">Style tiles and element collages were used to quickly explore visual styles and elements. The final design is characterized by a soft color palette derived from the existing logo and subtle photography treatments.</figcaption>
     </figure>
 
     <figure class="project__figure">
@@ -53,7 +53,7 @@
         <img srcset="assets/hh-prose-interface-sm.jpg, assets/hh-prose-interface-sm@2x.jpg 2x" >
       </picture>
 
-      <figcaption class="left">On the backend, Prose was chosen for its simple and intuitive interface that only exposes writing and editing capabilities. Combining that with Github Pages allowed effortless publishing and backups. A lot of technical debt created by the previous, conventional CMS was eliminated.</figcaption>
+      <figcaption class="project__caption--harmonyhome left">On the backend, Prose was chosen for its simple and intuitive interface that only exposes writing and editing capabilities. Combining that with Github Pages allowed effortless publishing and backups. A lot of technical debt created by the previous, conventional CMS was eliminated.</figcaption>
     </figure>
 
     <figure class="project__figure">
