--- a/source/sass/manifest.scss
+++ b/source/sass/manifest.scss
@@ -23,8 +23,11 @@
   // @import "utilities/typeplate";
   @import "utilities/fonts-verlag";
   @import "utilities/fonts-calluna";
-  @import "utilities/fonts-kepler";
-  @import "utilities/fonts-whitney";
+  @import "utilities/fonts-callunaSans";
+  // @import "utilities/fonts-ptSans";
+  // @import "utilities/fonts-ptSansCaption";
+  // @import "utilities/fonts-kepler";
+  // @import "utilities/fonts-whitney";
   // @import "utilities/font-awesome";
 
 // ATOMS
