--- a/source/sass/utilities/_fonts-callunaSans.scss
+++ b/source/sass/utilities/_fonts-callunaSans.scss
@@ -6,43 +6,25 @@
 //        CLIENT: Albert Yu                                                    /
 //   DELIVERABLE: Website Prototype                                            /
 //         CLASS: Utility                                                      /
-//         TITLE: Font Definitions                                             /
+//         TITLE: Font Definitions (Calluna Sans)                              /
 //                                                                             /
 //=============================================================================/
 
-// Kepler Std
-%keplerLight {
-  font-family: "kepler-std",serif;
+// Calluna
+%callunaSansLight {
+  font-family: "calluna-sans","Gill Sans",Calibri,"Trebuchet MS",sans-serif;
   font-style: normal;
   font-weight: 300;
 }
 
-%keplerLightItalic {
-  font-family: "kepler-std",serif;
-  font-style: italic;
-  font-weight: 300;
-}
-
-%keplerRegular {
-  font-family: "kepler-std",serif;
+%callunaSans {
+  font-family: "calluna-sans","Gill Sans",Calibri,"Trebuchet MS",sans-serif;
   font-style: normal;
   font-weight: 400;
 }
 
-%keplerItalic {
-  font-family: "kepler-std",serif;
-  font-style: italic;
-  font-weight: 400;
-}
-
-%keplerMedium {
-  font-family: "kepler-std",serif;
+%callunaSansSemibold {
+  font-family: "calluna-sans","Gill Sans",Calibri,"Trebuchet MS",sans-serif;
   font-style: normal;
-  font-weight: 500;
-}
-
-%keplerMediumItalic {
-  font-family: "kepler-std",serif;
-  font-style: italic;
-  font-weight: 500;
+  font-weight: 600;
 }
