- Tweaked logo positioning in Information section - Added <hr> to space out certain images for small-screen tube layout

--- a/source/_includes/projects/ekpac.html
+++ b/source/_includes/projects/ekpac.html
@@ -42,6 +42,8 @@
         <img srcset="assets/ekpac-products-sm.jpg, assets/ekpac-products-sm@2x.jpg 2x" >
       </picture>
 
+      <hr class="hr">
+
       <picture class="bordered half last">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
         <source srcset="assets/ekpac-excellence-lg.jpg, assets/ekpac-excellence-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
@@ -50,6 +52,8 @@
         <img srcset="assets/ekpac-excellence-sm.jpg, assets/ekpac-excellence-sm@2x.jpg 2x" >
       </picture>
 		</figure>
+
+    <hr class="hr">
 
 		<figure class="project__figure">
       <picture class="bordered">
