--- a/source/_includes/projects/harmonyhome.html
+++ b/source/_includes/projects/harmonyhome.html
@@ -65,6 +65,8 @@
         <img srcset="assets/hh-profile-sm.jpg, assets/hh-profile-sm@2x.jpg 2x" >
       </picture>
 
+      <hr class="hr">
+
       <picture class="bordered half last">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
         <source srcset="assets/hh-services-lg.jpg, assets/hh-services-lg@2x.jpg 2x" media="(min-width: 48.0625em)" >
