--- a/source/sass/manifest.scss
+++ b/source/sass/manifest.scss
@@ -35,6 +35,7 @@
   @import "atoms/headings";
   @import "atoms/links";
   @import "atoms/colors";
+  @import "atoms/hr";
 
 // MOLECULES
   @import "molecules/site-logo";
