--- a/source/sass/atoms/_hr.scss
+++ b/source/sass/atoms/_hr.scss
@@ -12,9 +12,12 @@
 
 .hr {
   width: 25%;
-  height: 1px;
+  height: 2px;
+  border: none;
+
+  margin: 2.945rem auto;
 
   @include breakpoint($tablet) {
-    width: 20%;
+    display: none;
   }
 }
