--- a/source/sass/molecules/_site-logo.scss
+++ b/source/sass/molecules/_site-logo.scss
@@ -36,7 +36,7 @@
 
 #monogram {
   // display: none;
-  fill: #f0f0f0;
+  fill: #ececec;
 
   @include breakpoint($tablet) {
     // display: block;
