--- a/source/sass/organisms/_project-harmonyhome.scss
+++ b/source/sass/organisms/_project-harmonyhome.scss
@@ -51,6 +51,12 @@
     @include box-shadow(0 0 0 1px #f2f2f2);
   }
 
+  // <hr>
+  .harmonyhome .hr {
+    background-color: darken(#8dd7c3, 10);
+    border-bottom: 1px solid desaturate(lighten(#8dd7c3, 10), 5%);
+  }
+
   // Caption text
   .project__caption--harmonyhome {
     color: desaturate(lighten(#1a4b3e, 20), 20%);
