- Added/edited copy, wordsmithed - Visual tweaks

--- a/source/_includes/projects/ekpac.html
+++ b/source/_includes/projects/ekpac.html
@@ -63,6 +63,8 @@
         <!--[if IE 9]></video><![endif]-->
         <img srcset="assets/ekpac-id-beforeAfter-sm.jpg, assets/ekpac-id-beforeAfter-sm@2x.jpg 2x" >
       </picture>
+
+      <figcaption class="project__caption--ekpac left">The new mark is distinguished by a sleek, agile form – a visualization of Ekpac’s persistent forward momentum. The redesign as a whole preserves and repurposes elements of the old identity, paying respect to the company’s rich heritage.</figcaption>
 		</figure>
 
 		<figure class="project__figure">
