--- a/source/_includes/page-footer.html
+++ b/source/_includes/page-footer.html
@@ -1,7 +1,7 @@
 <footer class="block block--footer">
   <div class="column">
   	<ul class="social cl-effect-12">
-  		<li><a href="" class="icon icon--phone">{% include svg/phone.svg %}</a></li>
+  		<li><a href="tel:+85263051181" class="icon icon--phone">{% include svg/phone.svg %}</a></li>
   		<li><a href="https://twitter.com/mj12albert" target="_blank" class="icon icon--twitter">{% include svg/twitter.svg %}</a></li>
   		<li><a href="http://instagram.com/mj12albert" target="_blank" class="icon icon--instagram">{% include svg/instagram.svg %}</a></li>
   		<li><a href="http://tumblr.albertyu.co/" target="_blank" class="icon icon--tumblr">{% include svg/tumblr.svg %}</a></li>
