--- a/source/_includes/section-information.html
+++ b/source/_includes/section-information.html
@@ -9,6 +9,6 @@
 
     <p>I start projects with rich conversations to establish tone and voice, before venturing into ideation and execution. Instead of force-fitting your project into a rigid process, I tailor methods and deliverables to best meet the circumstances and challenges of every engagement.</p>
 
-    <p>I work well by myself or as part of a team. I can sweat the details without losing sight of the big picture. Working remotely keeps my mind fresh and keeps costs low for everyone. I’m good at choosing the right tools for the job at hand, and I’m always learning new things to add to my toolbox. I am not an Apple snob. I do not wear trendy glasses.</p>
+    <p>I work well by myself or as part of a team. I can sweat the details without losing sight of the big picture. Working remotely keeps my mind fresh and keeps costs low for everyone. I’m good at choosing the right tools for the job at hand, and I’m always learning new things to add to my toolbox. I do not wear trendy glasses.</p>
   </article>
 </div>
