--- a/source/sass/organisms/_project-ekpac.scss
+++ b/source/sass/organisms/_project-ekpac.scss
@@ -84,9 +84,11 @@
   }
 
   // Caption text
-  .project__caption--ekpac {
-    @include font-smoothing(off);
-    @include tran(color, #e0e0e0, 0.99, lighten);
+  .project__caption--ekpac.project__caption--ekpac {
+    // @include font-smoothing(off);
+    // @include tran(color, #f2f2f2, 0.99, lighten);
+    font-weight: 400;
+    color: #f2f2f2;
 
     &:before {
       color: #fecb00;
