- Added build tags for html preprocessing - Updated project level config files for build system

--- a/source/_includes/document-header.html
+++ b/source/_includes/document-header.html
@@ -11,9 +11,11 @@
 
   <!-- Picturefill -->
   <script>document.createElement("picture");</script>
+  <!--build:js js/picturefill.min.js -->
   <script src="js/vendor/picturefill.js" async></script>
+  <!--/build-->
 
-  <!-- Typekit 1.1.0 -->
+  <!-- Typekit Dev -->
   <script type="text/javascript">
     (function(d) {
       var config = {
@@ -27,7 +29,9 @@
   <!-- Cloud.typography 1.1.0 -->
   <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6808232/761324/css/fonts.css" />
 
+  <!--build:css css/albertyu.css -->
   <link rel="stylesheet" href="css/manifest.css">
+  <!--/build -->
 </head>
 
 <body>
