--- a/source/_includes/document-footer.html
+++ b/source/_includes/document-footer.html
@@ -1,10 +1,12 @@
 <!-- JAVASCRIPT -->
   <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
 
+	<!--build:js js/albertyu.js -->
 	<script src="js/vendor/domReady.js"></script>
 	<script src="js/vendor/vhBuggyfill.js"></script>
 	<script src="js/vendor/smoothScroll.js"></script>
 
 	<script src="js/main.js"></script>
+	<!--/build -->
 </body>
 </html>
