--- a/source/_includes/document-footer.html
+++ b/source/_includes/document-footer.html
@@ -1,6 +1,4 @@
 <!-- JAVASCRIPT -->
-  <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
-
 	<!--build:js js/albertyu.js -->
 	<script src="js/vendor/domReady.js"></script>
 	<script src="js/vendor/vhBuggyfill.js"></script>
@@ -8,5 +6,6 @@
 
 	<script src="js/main.js"></script>
 	<!--/build -->
+	<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-53225918-1','auto');ga('require','linkid','linkid.js');ga('send','pageview');</script>
 </body>
 </html>
