--- a/source/_includes/document-header.html
+++ b/source/_includes/document-header.html
@@ -9,24 +9,22 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!--build:remove -->
   <!-- Picturefill -->
+  <!--/build -->
   <script>document.createElement("picture");</script>
   <!--build:js js/picturefill.min.js -->
   <script src="js/vendor/picturefill.js" async></script>
   <!--/build-->
 
+  <!--build:remove -->
   <!-- Typekit Dev -->
-  <script type="text/javascript">
-    (function(d) {
-      var config = {
-        kitId: 'dtg6nmd',
-        scriptTimeout: 3000
-      },
-      h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='//use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-    })(document);
-  </script>
+  <!--/build -->
+  <script type="text/javascript">(function(d){var config={kitId:'dtg6nmd',scriptTimeout:3000},h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive"},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='//use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)})(document);</script>
 
+  <!--build:remove -->
   <!-- Cloud.typography 1.1.0 -->
+  <!--/build -->
   <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6808232/761324/css/fonts.css" />
 
   <!--build:css css/albertyu.css -->
