- Reorganized caption abstration, modifier classes and styles to   accomodate captions to the sides of images - Tidied up <head>

--- a/source/_includes/document-header.html
+++ b/source/_includes/document-header.html
@@ -6,25 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="robots" content="all">
   <title>{{ page.title }}</title>
-  <meta name="description" content="">
+  <meta name="author" content="Albert Yu">
+  <meta name="description" content="Albert Yu is a freelance designer and developer in Hong Kong.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!--build:remove -->
-  <!-- Picturefill -->
-  <!--/build -->
+<!--build:remove -->
+<!-- PICTUREFILL -->
+<!--/build -->
   <script>document.createElement("picture");</script>
   <!--build:js js/picturefill.min.js -->
   <script src="js/vendor/picturefill.js" async></script>
   <!--/build-->
 
-  <!--build:remove -->
-  <!-- Typekit Dev -->
-  <!--/build -->
+<!--build:remove -->
+<!-- TYPEKIT -->
+<!--/build -->
   <script type="text/javascript">(function(d){var config={kitId:'dtg6nmd',scriptTimeout:3000},h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive"},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='//use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)})(document);</script>
 
-  <!--build:remove -->
-  <!-- Cloud.typography 1.1.0 -->
-  <!--/build -->
+<!--build:remove -->
+<!-- CLOUD.TYPOGRAPHY 1.1.0 -->
+<!--/build -->
   <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6808232/761324/css/fonts.css" />
 
   <!--build:css css/albertyu.css -->
