--- a/source/_includes/projects/ekpac.html
+++ b/source/_includes/projects/ekpac.html
@@ -30,7 +30,7 @@
 				<source src="assets/ekpac-process.webm" type="video/webm; codecs=vp8,vorbis">
 				<source src="assets/ekpac-process.ogv" type="video/ogg; codecs=theora,vorbis">
 			</video>
-			<figcaption class="project__caption--ekpac left">The sourcing business’s process and approach was presented as candidly as possible to stand out in China’s industrial sector, which is often perceived as opaque and impenetrable.</figcaption>
+			<figcaption class="project__caption--ekpac project__caption--below left">The sourcing business’s process and approach was presented as candidly as possible to stand out in China’s industrial sector, which is often perceived as opaque and impenetrable.</figcaption>
 		</figure>
 
 		<figure class="project__figure">
@@ -64,7 +64,7 @@
         <img srcset="assets/ekpac-id-beforeAfter-sm.jpg, assets/ekpac-id-beforeAfter-sm@2x.jpg 2x" >
       </picture>
 
-      <figcaption class="project__caption--ekpac left">The new mark is distinguished by a sleek, agile form – a visualization of Ekpac’s persistent forward momentum. The redesign as a whole preserves and repurposes elements of the old identity, paying respect to the company’s rich heritage.</figcaption>
+      <figcaption class="project__caption--ekpac project__caption--below left">The new mark is distinguished by a sleek, agile form – a visualization of Ekpac’s persistent forward momentum. The redesign as a whole preserves and repurposes elements of the old identity, paying respect to the company’s rich heritage.</figcaption>
 		</figure>
 
 		<figure class="project__figure">
